<resources>
    <string name="app_name">Olea</string>
    <string name="splash_text"><i>Science from world history</i></string>
    <string name="question_submit_button_text">OK</string>
    <string name="internet_connection_error">Internet connection cannot established. Connect to see more activities and stories!</string>
    <string name="error">Error occured</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="complete">Complete</string>

    <!--Create Game Fragment -->
    <string name="add_name">Frame name</string>
    <string name="add_explanation">Add explanation</string>
    <string name="add_question">Add question</string>
    <string name="add_answer">Enter answer</string>
    <string name="add_start_image">Add starting image</string>
    <string name="add_end_image">Add ending image</string>

    <!-- Home Fragment -->
    <string name="play_button">PLAY</string>
    <string name="create_button">Create Your Module</string>
    <string name="sound_off">Mute Sound</string>
    <string name="sound_on">Open Sound</string>

    <!-- Map Fragment Chapters -->
    <string name="ch_cell">Cell</string>
    <string name="ch_mitosis">Mitosis</string>
    <string name="ch_mayosis">Mayosis</string>
    <string name="ch_reproduction">Reproduction</string>
    <string name="ch_force">Force</string>
    <string name="ch_energy">Energy</string>
    <string name="ch_lens">Lens</string>
    <string name="ch_optic">Optic</string>
    <string name="ch_recycle">Recycling</string>
    <string name="ch_element">Element</string>
    <string name="ch_substance">Substance</string>
    <string name="ch_solution">Solution</string>
    <string name="ch_select_warning">This is a demo version. Only Physics-Force chapter is available.</string>

    <!-- Questions -->
    <string name="question1_title">Dünyanın İlk Saplı Baltası</string>
    <string name="question1_time">Eski (paleolitik) Taş Devri</string>
    <string name="question1_place">Kuzey Avustralya</string>
    <string name="question1_context">
        Baltalar avcı-toplayıcı toplumlarda çok önemli aletlerdi.
        Kendilerini koruma ve çevredeki malzemeleri kesip kullanabilmek için çokça kullanılırdı.
        Günümüzde keşfedilen en eski saplı balta Avustralya\'nın Batısında bulundu.
        Karbon analizine göre yaklaşık 50000 yıl önce kullanılan bu balta yeni bir arkeolojik keşif olmadığı sürece dünya tarihinin ilk saplı baltası.
        Bir baltanın bir ağacı kesebilmesini, sivriltilmiş ucunun uyguladığı basınç sağlar.
        Bir cismi ne kadar sivriltirseniz o kadar keskin olur, çünkü basınç kuvvet ile doğru, yüzey alanı ile ters orantılıdır.
        Resimde gördüğün Avustralya\'daki bu ağacın kesilmesi için 100 N/m&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt; lik bir basınç uygulamaız gerekiyor.
    </string>
    <string name="question1_question">Peki bu ağacı kesmek için 1 N\'luk bir kuvvet uygulayabiliyorsak, baltanın yüzey alanı kaç cm&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt; olmalıdır?</string>
    <string name="question1_answer">100</string>

    <string name="question2_title">Kardaki Raket</string>
    <string name="question2_time">MÖ 3800-3700</string>
    <string name="question2_place">Kuzey İtalya</string>
    <string name="question2_context">
        Karlı iklimin hakim olduğu bölgelerde yürüyebilmek için ağırlığı kar yüzeyine yayıp batmayı engellemek için ayaktan daha geniş bir yüzeye sahip olan kar ayakkabısı kullanılır.
        Keşfedilen en eski kar ayakkabısı 3500 yaşındadır.
        Huş ağacı ve sicimden örülmüş olan bu kar ayakkabısı İtalya -Avusturya sınırında bulunmuştur.
        Kar ayakkabısının batmaması yine uygulanan basınç ile alakalıdır.
        Yüzey alanı daha dar olan ayakkabılar, kar yüzeyine daha fazla basınç uyguladığı için bu hassas zemin kolaylıkla çöker.
    </string>
    <string name="question2_question">
        Peki, 48 kg olan bir insan karda batmamak için 600&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt;lik bir yüzeye ihtiyaç duyuyorsa,
        80 kg kütleye sahip bir insan kaç cm&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt;\'lik bir yüzeye ihtiyaç duyar?
    </string>
    <string name="question2_answer">100</string>

    <string name="question3_title">Fenikeliler(Kenaniler)</string>
    <string name="question3_time">MÖ 1200-330</string>
    <string name="question3_place">Akdeniz</string>
    <string name="question3_context">
        Fenikeliler Antik çağda yaşamış deniz ticareti ile ünlü akdenizli bir kavimdir.
        Deniz ticareti yaparken yüklerini kayıt altına almak için alfabeyi bulmuşlardır, günümüzün modern alfabeleri buradan gelişmiştir.
        Ayrıca Fenikeliler dünyada ilk defa kırmızı/mor rengi kumaşlarda elde etmeyi başarmışlardır.
        Bu kumaşları inşa ettikleri gemiler sayesinde uzak diyarlara götürebilmişlerdir.
        Koca bir gemiyi inşa etmeden önce bu geminin birebir boyutlarında maketini yapmak faydalı olabilir.
        Böylece sudaki davranışlarını gözlemleyebilir, dalgalara ne kadar dayanıklı olduğunu görebiliriz.
        Geminin maketini yaparak şekline bağlı olarak olması gereken ağırlığı da hesaplayabiliriz, böylece uygun olan ağacı seçmemiz kolaylaşır.
    </string>
    <string name="question3_question">
        Peki, maket gemimizin suda kapladığı hacim 300 cm&lt;sup&gt;&lt;small&gt;3&lt;/small&gt;&lt;/sup&gt; ise
        ve suyun yoğunluğu 1g/cm&lt;sup&gt;&lt;small&gt;3&lt;/small&gt;&lt;/sup&gt; ise bu maket geminin kütlesi kaç gramdır?
    </string>
    <string name="question3_answer">100</string>

    <string name="question4_title">İlk Kadın Olimpiyat Şampiyonu Kyneska</string>
    <string name="question4_time">MÖ 396</string>
    <string name="question4_place">Yunanistan</string>
    <string name="question4_context">
        Olimpiyat oyunları ilk MÖ 776 yılında düzenlendi.
        İlk olimpik oyunlar cirit atma, atletizm (koşu), uzun atlama, disk atma, atlı koşu, güreş ve bokstu.
        Sadece erkeklerin yarıştığı oyunlarda Sparta Prensesi Kyneska atlı yarışlarda birinci gelerek dünya tarihinde önemli bir rol oynamaktadır.
        Atlar insanın en eski dostlarından biridir ve yarışlar dışında tarımda ve ulaşımda da bize yardım etmişlerdir.
        Şu anda da bir güç birimi olarak kullanılan beygir gücü bir atın 75 kg\'lık bir cismi 1 metre boyunca 1 saniyede çekmesi için gereken gücü temsil eder.
    </string>
    <string name="question4_question">Peki Kyneska\'nın o dönemki yarış arabası kendisi de dahil 300 kg ise 50 metrelik parkuru 4 beygir kaç saniyede tamamlamıştır?</string>
    <string name="question4_answer">100</string>

    <string name="question5_title">Sümerler ve Tekerin İcadı</string>
    <string name="question5_time">MÖ 4000 - MÖ 2000</string>
    <string name="question5_place">Güney Mezopotamya</string>
    <string name="question5_context">
        Tarihin Sümerler ile başladığı söylenmektedir.
        Bunun sebebi Sümerler, günümüz medeniyetleri için çok önemli buluşlar ortaya koymuştur.
        İlk yazıyı Sümerler bulmuştur,çivi yazısı ile kil tabletlere işlemişlerdir.
        Tekerleğin icadı, ilk araçlar da yine bu medeniyetin icatlarındandır.
        Ayrıca astronomi, matematik ve geometrinin temellerini atmışlardır.
        Yılbaşı ağacı süsleme, evlilik yüzüğü, nazar boncuğu da Sümerlerde görülmüştür.
        Sümerler bulunduğu coğrafya sayesinde tarımda da çok ilerlemiş, at ve öküzlerin çekebileceği güzel araçlar yapmışlardır.
        Bir önceki soruda beygir gücünden bahsetmiştik, öküzler atlara göre çok daha güçlü hayvanlardır.
    </string>
    <string name="question5_question">Resimdeki öküzler 600 kg\'lık yükü 60 metre boyunca 30 saniyede geçebiliyorsa, bir öküz kaç at gücündedir?</string>
    <string name="question5_answer">100</string>

    <!-- Select Topic Fragment-->
    <string name="select_topic_header">Select A Topic</string>

    <!--Leave Game Dialog -->
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure">Do you want to quit game now?</string>

</resources>
