<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/frame_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/frame_delete"
        android:layout_width="@dimen/unit24"
        android:layout_height="@dimen/unit24"
        android:layout_alignRight="@+id/frame_card"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/unit3"
        android:tint="@color/white"
        app:fabCustomSize="@dimen/unit24"
        app:srcCompat="@drawable/ic_close" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frame_card"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/unit10"
        android:backgroundTint="@color/md_blue_grey_100"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/unit10">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="@dimen/unit200"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/unit3"
                android:orientation="vertical"
                android:padding="@dimen/unit8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit3"
                    android:orientation="horizontal">

                    <TextView
                        style="FrameText"
                        android:layout_width="@dimen/unit140"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/add_start_image" />

                    <ImageView
                        android:id="@+id/frame_add_start_image"
                        android:layout_width="@dimen/unit30"
                        android:layout_height="@dimen/unit30"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/unit3"
                        app:srcCompat="@drawable/add_image" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/frame_start_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/unit120"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/unit3"
                    android:scaleType="centerInside"
                    android:visibility="gone"
                    tool:src="@drawable/caveman01" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit3"
                    android:orientation="horizontal">

                    <TextView
                        style="FrameText"
                        android:layout_width="@dimen/unit140"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/add_end_image" />

                    <ImageView
                        android:id="@+id/frame_add_end_image"
                        android:layout_width="@dimen/unit30"
                        android:layout_height="@dimen/unit30"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/unit3"
                        app:srcCompat="@drawable/add_image" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/frame_end_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/unit120"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/unit3"
                    android:scaleType="centerInside"
                    android:visibility="gone"
                    tool:src="@drawable/caveman02" />

                <EditText
                    android:id="@+id/frame_name"
                    style="@style/FrameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit3"
                    android:hint="@string/add_name" />

                <EditText
                    android:id="@+id/frame_context"
                    style="@style/FrameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/add_explanation" />

                <EditText
                    android:id="@+id/frame_question"
                    style="@style/FrameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit3"
                    android:hint="@string/add_question" />

                <EditText
                    android:id="@+id/frame_answer"
                    style="@style/FrameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit3"
                    android:hint="@string/add_answer" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <Button
        style="@style/DialogButton"
        android:id="@+id/frame_save"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/unit30"
        android:layout_alignRight="@+id/frame_card"
        android:layout_alignBottom="@id/frame_card"
        android:layout_margin="@dimen/unit3"
        android:textSize="@dimen/unit18"
        android:text="@string/save" />

</RelativeLayout>